fix: lower default bio textarea size to prevent overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -508,6 +508,10 @@ svg {
   justify-content: space-between;
 }
 
+.biodiv textarea {
+  max-height: 5vh;
+}
+
 .chatinfo {
   /* position: absolute;
   top: 25%;
